GS-6815 GS-6483 Fix phone number wrapping on search browse results, keep behavior on MSL page

--- a/src/webapp/res/css/community/mySchoolList.css
+++ b/src/webapp/res/css/community/mySchoolList.css
@@ -51,6 +51,10 @@
     border-top:1px solid #CCCCCC;
 }
 
+div.phone {
+   float:left;
+}
+
 div.phone span {
     padding:0 4px 0 6px;
 }
