--- a/src/webapp/res/css/school/schoolsTable.css
+++ b/src/webapp/res/css/school/schoolsTable.css
@@ -262,10 +262,6 @@ div.school div.mslRemove img {
     margin:0 5px 0 0;
 }
 
-.phone {
-   float:left;
-}
-
 a.mapSchoolImage:hover {
     text-decoration:none;
 }
